# anvil

./: README.md  pyproject.toml
anvil/: __init__.py  _cli.py  core.py  utility.py
anvil_blueprints/: atomsk.py  bazelisk.py  deepmd_kit.py  lammps.py  lammps_mlip_interface.py  mlip.py  mpich.py  ovito.py  tensorflow.py
